RASS-960 correctly map fine amount from API to session

--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -151,7 +151,7 @@
                                                                 sentenceServeType: offence.sentence.sentenceServeType,
                                                                 consecutiveTo: offence.sentence.consecutiveTo,
                                                                 sentenceType: courtCaseDetails.sentenceTypeMap[offence.sentence.sentenceTypeId] | sentenceTypeValueOrLegacy(offence.sentence.legacyData),
-                                                                fineAmount: offence.sentence.fineAmount.fineAmount,
+                                                                fineAmount: offence.sentence.fineAmount,
                                                                 detailsClasses: 'govuk-!-padding-4'
                                                             })
                                                         }}
