--- a/server/views/pages/sentencing/check-overall-answers.njk
+++ b/server/views/pages/sentencing/check-overall-answers.njk
@@ -98,7 +98,10 @@
 {% endif %}
 
 {% block pageContent %}
-    {% include "../../partials/offenceCaption.njk" %}
+    <span class="govuk-caption-l" data-qa="warrant-information-caption">
+        Add overall warrant information
+    </span>
+
     <h1 class="govuk-heading-l">
         Check your answers
     </h1>
