--- a/server/views/pages/sentencing/case-outcome-applied-all.njk
+++ b/server/views/pages/sentencing/case-outcome-applied-all.njk
@@ -12,9 +12,11 @@
     {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-case-outcome-applied-all-sentencing{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
+            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/SENTENCING/submit-case-outcome-applied-all{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                {% include "../../partials/offenceCaption.njk" %}
+                <span class="govuk-caption-l" data-qa="warrant-information-caption">
+                    Add overall warrant information
+                </span>
                 {{ govukRadios({
                     name: "caseOutcomeAppliedAll",
                     fieldset: {
