edit-appperance-details page is separated into 2

--- a/server/views/pages/courtAppearance/remand-appearance-details.njk
+++ b/server/views/pages/courtAppearance/remand-appearance-details.njk
@@ -61,8 +61,6 @@
         ]
     }
 }) %}
-
-{% if appearance.warrantType !== 'SENTENCING' %}
     {% set appearanceSummaryRows = appearanceSummaryRows.concat({
         key: {
             text: "Overall case outcome"
@@ -80,7 +78,6 @@
             ]
         }
     }) %}
-{% endif %}
 
 {% set nextHearingSummaryRows = [{
     key: {
@@ -155,36 +152,7 @@
         }
     ]) %}
 {% endif %}
-{% set overallSentenceLengthText = "Not entered" %}
-{% if appearance.overallSentenceLength %}
-    {% set overallSentenceLengthText = appearance.overallSentenceLength | formatLengths %}
-{% endif %}
 
-{% set offenceRows = [{
-        key: {
-            text: "Overall sentence length"
-        },
-        value: {
-            text: overallSentenceLengthText
-        },
-        actions: {
-            items: [
-                {
-                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/SENTENCING/overall-sentence-length",
-                    text: "Edit",
-                    visuallyHiddenText: "overall sentence length"
-                }
-            ]
-        }
-    }, {
-        key: {
-                text: "Sentences added"
-            },
-        value: {
-                text: overallSentenceLengthComparison.custodialLength | formatLengthsWithoutPeriodOrder
-            }
-    }
-    ] %}    
 
 {% block content %}
     {{ super() }}
@@ -215,12 +183,6 @@
                 }) }}
 
             <h2 class="govuk-heading-m">Offences <span class="govuk-body">({{ appearance.offences | length }})</span></h2>
-            {{ govukSummaryList({
-                rows: offenceRows,
-                attributes: {
-                    "data-qa": "offenceSummaryList"
-                }
-            }) }}
 
             {{ govukButton({
                 text: "Add an offence" ,
@@ -231,79 +193,44 @@
                 }
             }) }}
 
-            <h3 class="govuk-heading-s govuk-!-margin-top-8">Offences with custodial outcomes</h3>
-
-    {% for offence in custodialChangedOffences %}
-        {{
-                    offenceCard({
-                        offenceCode: offence.offenceCode,
-                        offenceName: offenceMap[offence.offenceCode],
-                        offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
-                        offenceEndDate: offence.offenceEndDate | formatDate,
-                        outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
-                        outcomeUpdated: offence.updatedOutcome,
-                        countNumber: offence.sentence.countNumber,
-                        convictionDate: offence.sentence.convictionDate | formatDate,
-                        terrorRelated: offence.terrorRelated,
-                        isSentenced: offence.sentence,
-                        periodLengths: offence.sentence.periodLengths,
-                        sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
-                        fineAmount: offence.sentence.fineAmount,
-                        actions: {
-                            items: [
-                                {
-                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offence.index + "/edit-offence",
-                                    text: "Edit",
-                                    visuallyHiddenText: "edit offence"
-                                }
-                            ]
-                        }
-                    })
+   {% for offence in appearance.offences %}
+                {{
+                offenceCard({
+                    offenceCode: offence.offenceCode,
+                    offenceName: offenceMap[offence.offenceCode],
+                    offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
+                    offenceEndDate: offence.offenceEndDate | formatDate,
+                    outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
+                    countNumber: offence.sentence.countNumber,
+                    convictionDate: offence.sentence.convictionDate | formatDate,
+                    terrorRelated: offence.terrorRelated,
+                    isSentenced: offence.sentence,
+                    periodLengths: offence.sentence.periodLengths,
+                    sentenceServeType: offence.sentence.sentenceServeType,
+                    consecutiveTo: offence.sentence.consecutiveTo,
+                    sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] | sentenceTypeValueOrLegacy(offence.sentence.legacyData),
+                    fineAmount: offence.sentence.fineAmount,
+                    actions: {
+                        items: [
+                            {
+                                href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + loop.index0 + "/edit-offence",
+                                text: "Edit",
+                                visuallyHiddenText: "edit"
+                            },
+                            {
+                                href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + loop.index0 + "/delete-offence",
+                                text: "Delete",
+                                visuallyHiddenText: "delete"
+                            }
+                        ]
+                    }
+                })
                 }}
-    {% else %}
-        {{ govukInsetText({
-                    text: "There are no offences with custodial outcomes."
-                }) }}
-    {% endfor %}
-
-    <h3 class="govuk-heading-s govuk-!-margin-top-8">Offences with non-custodial outcomes</h3>
-
-    {% for offence in nonCustodialChangedOffences %}
-        {{
-                    offenceCard({
-                        offenceCode: offence.offenceCode,
-                        offenceName: offenceMap[offence.offenceCode],
-                        offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
-                        offenceEndDate: offence.offenceEndDate | formatDate,
-                        outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
-                        outcomeUpdated: offence.updatedOutcome,
-                        countNumber: offence.sentence.countNumber,
-                        convictionDate: offence.sentence.convictionDate | formatDate,
-                        terrorRelated: offence.terrorRelated,
-                        isSentenced: offence.sentence,
-                        periodLengths: offence.sentence.periodLengths,
-                        sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
-                        fineAmount: offence.sentence.fineAmount,
-                        actions: {
-                            items: [
-                                {
-                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offence.index + "/edit-offence",
-                                    text: "Edit",
-                                    visuallyHiddenText: "edit offence"
-                                }
-                            ]
-                        }
-                    })
-                }}
-    {% else %}
-        {{ govukInsetText({
-                    text: "There are no offences with non-custodial outcomes."
-                }) }}
     {% endfor %}
 
             
 
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-details-edit">
+            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-remand-details-edit">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 <div class="govuk-button-group">
                     {{ govukButton({
